--- a/index1.html
+++ b/index1.html
@@ -4,20 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to My Home</title>
-    <link rel="stylesheet" href="./file/style.css">
+    <title>Grid Assignment</title>
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body>
     <main>
-        <section class="first"></section>
-        <section class="first"></section>
+        <section><a href=" https://odedelekolawole.github.io/grid/">Grid Assignment</a></section>
         <section></section>
         <section></section>
         <section></section>
         <section></section>
-        <section class></section>
         <section></section>
-        <section class="favourite"></section>
+        <section></section>
+        <section></section>
     </main>
 </body>
 </html>
