Feat: Adding Assignment to the Classwork

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <section class="first"></section>
+        <section class="first"> <a href="./index1.html">Assignment on Grid</a> </section>
         <section class="first"></section>
         <section></section>
         <section></section>
