--- a/index1.html
+++ b/index1.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <section><a href=" https://odedelekolawole.github.io/grid/">Grid Assignment</a></section>
+        <section> <a href="https://odedelekolawole.github.io/grid/">Assignment on Grid</a> </section>
         <section></section>
         <section></section>
         <section></section>
