Feat: New feature added to existing commit

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <main>
-        <section class="first"><a href="./index1.html">Assignment on Grid</a> </section>
+        <section class="first"><a href="./index1.html">Assignment on Grid</a></section>
         <section class="first"></section>
-        <section></section>
+        <section><a href="./port1.html">Assignment on Portfolio Profile</a></section>
         <section></section>
         <section></section>
         <section></section>
